--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="box bb-0 br-0"><span class="boxtext"></span></div>
       </div>
       <div class="gameInfo">
-        <h1>Welcome to My TicTacToe</h1>
+        <h1>Welcome to My TIC TAC TOE</h1>
 
         <!-- Info + reset button inline -->
         <div class="topRow">
